--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   google_fonts: ^6.2.1
   mobility_features: ^4.0.1
   table_calendar: ^3.1.1
-
+  shared_preferences: ^2.0.15
+  geolocator: ^11.0.0
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
