--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,18 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
+  
     sdk: flutter
   google_fonts: ^6.2.1
   mobility_features: ^4.0.1
   table_calendar: ^3.1.1
   shared_preferences: ^2.0.15
   geolocator: ^11.0.0
+  firebase_core: ^2.30.1
+  cloud_firestore: ^4.17.2
+  firebase_auth: ^4.19.4
   
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
