--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_core: ^2.31.0
+  cloud_firestore: ^4.17.3
+  image_picker: ^1.1.1
+  firebase_storage: ^11.7.5
+  firebase_auth: ^4.19.5
+  fluttertoast: ^8.2.5
 
 dev_dependencies:
   flutter_test:
